--- a/src/app/features/home-brand/home-brand.component.css
+++ b/src/app/features/home-brand/home-brand.component.css
@@ -1,6 +1,7 @@
 :host {
   position: relative;
   width: 100%;
+  height: 60vh;
   left: 0;
   right: 0;
   top: 0;
